<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rajshahi University of Engineering &amp; Technology"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:src="@drawable/ruet"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="History"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_college"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vision"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mission"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Campus Map"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weather"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accomodation"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accomodation"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Food"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Market"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hospital"
                android:layout_marginTop="36dp"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="@string/light"/>


        </LinearLayout>

    </ScrollView>

</FrameLayout>